PortfolioApp successfully linking to external url in a separate window; corrected Titlebar for lowercase y overlap

--- a/Components/Titlebar.css
+++ b/Components/Titlebar.css
@@ -7,6 +7,7 @@
 		font-style: bold;
 		border-top: 2px #CCCCCC solid;
 		border-bottom: 2px #CCCCCC solid;
+		padding-bottom: 10px;
 	}
 
 
